--- a/automatic/service-fabric-sdk/service-fabric-sdk.nuspec
+++ b/automatic/service-fabric-sdk/service-fabric-sdk.nuspec
@@ -5,7 +5,7 @@
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>service-fabric-sdk</id>
     <title>Service Fabric SDK</title>
-    <version>4.2.452</version>
+    <version>4.2.477</version>
     <authors>Microsoft</authors>
     <owners>Darin Egan</owners>
     <summary>Service Fabric is a distributed systems platform for packaging, deploying, and managing stateless and stateful distributed applications and containers at large scale.</summary>
@@ -18,13 +18,13 @@ Service Fabric is a distributed systems platform that makes it easy to package, 
     <licenseUrl>https://github.com/Microsoft/service-fabric/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <iconUrl>https://cdn.jsdelivr.net/gh/darinegan/chocolatey-packages@latest/icons/service-fabric.png</iconUrl>
-    <releaseNotes>[Microsoft Azure Service Fabric 7.2 Fifth Refresh Release Notes](https://github.com/microsoft/service-fabric/blob/master/release_notes/Service-Fabric-72CU5-ReleaseNotes.md)</releaseNotes>
+    <releaseNotes>[Microsoft Azure Service Fabric 7.2 Seventh Refresh Release Notes](https://github.com/microsoft/service-fabric/blob/master/release_notes/Service-Fabric-72CU7-releasenotes.md)</releaseNotes>
     <docsUrl>https://docs.microsoft.com/azure/service-fabric</docsUrl>
     <bugTrackerUrl>https://github.com/azure/service-fabric-issues</bugTrackerUrl>
     <projectSourceUrl>https://github.com/Microsoft/service-fabric</projectSourceUrl>
     <packageSourceUrl>https://github.com/darinegan/chocolatey-packages/tree/master/automatic/service-fabric-sdk</packageSourceUrl>
     <dependencies>
-      <dependency id="service-fabric" version="7.2.452" />
+      <dependency id="service-fabric" version="7.2.477" />
     </dependencies>
   </metadata>
   <files>
