--- a/automatic/service-fabric/service-fabric.nuspec
+++ b/automatic/service-fabric/service-fabric.nuspec
@@ -18,7 +18,7 @@ Service Fabric is a distributed systems platform that makes it easy to package, 
     <licenseUrl>https://github.com/Microsoft/service-fabric/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <iconUrl>https://cdn.jsdelivr.net/gh/darinegan/chocolatey-packages@latest/icons/service-fabric.png</iconUrl>
-    <releaseNotes>[Microsoft Azure Service Fabric Release Notes](https://github.com/microsoft/service-fabric/tree/master/release_notes)</releaseNotes>
+    <releaseNotes>[Microsoft Azure Service Fabric 10.1 CU3 Release Notes](https://github.com/microsoft/service-fabric/blob/master/release_notes/Service_Fabric_ReleaseNotes_101CU3.md)</releaseNotes>
     <docsUrl>https://docs.microsoft.com/azure/service-fabric</docsUrl>
     <bugTrackerUrl>https://github.com/azure/service-fabric-issues</bugTrackerUrl>
     <projectSourceUrl>https://github.com/Microsoft/service-fabric</projectSourceUrl>
