--- a/automatic/service-fabric/service-fabric.nuspec
+++ b/automatic/service-fabric/service-fabric.nuspec
@@ -5,7 +5,7 @@
     <!-- Read this before publishing packages to chocolatey.org: https://github.com/chocolatey/chocolatey/wiki/CreatePackages -->
     <id>service-fabric</id>
     <title>Service Fabric</title>
-    <version>10.1.2338</version>
+    <version>11.0.2707.1</version>
     <authors>Microsoft</authors>
     <owners>Darin Egan</owners>
     <summary>Service Fabric is a distributed systems platform for packaging, deploying, and managing stateless and stateful distributed applications and containers at large scale.</summary>
@@ -18,7 +18,7 @@ Service Fabric is a distributed systems platform that makes it easy to package, 
     <licenseUrl>https://github.com/Microsoft/service-fabric/blob/master/LICENSE</licenseUrl>
     <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <iconUrl>https://cdn.jsdelivr.net/gh/darinegan/chocolatey-packages@latest/icons/service-fabric.png</iconUrl>
-    <releaseNotes>[Microsoft Azure Service Fabric 10.1 Cumulative Update 4.0 Release Notes](https://github.com/microsoft/service-fabric/blob/master/release_notes/Service_Fabric_ReleaseNotes_101CU4.md)</releaseNotes>
+    <releaseNotes>[Microsoft Azure Service Fabric 11.0 Release Notes](https://github.com/microsoft/service-fabric/blob/544abc5897ad98ec75eb56ae3ed059d26afccd4d/release_notes/Service_Fabric_ReleaseNotes_110.md)</releaseNotes>
     <docsUrl>https://docs.microsoft.com/azure/service-fabric</docsUrl>
     <bugTrackerUrl>https://github.com/azure/service-fabric-issues</bugTrackerUrl>
     <projectSourceUrl>https://github.com/Microsoft/service-fabric</projectSourceUrl>
